@@ -50,6 +50,7 @@ public:
 	virtual void show_credits() =0;
 	virtual int  get_start_tile_x() =0;
 	virtual int  get_start_tile_y() =0;
+	virtual const char * get_extra_shape_file() =0;
 	
 	void clear_screen();
 	void refresh_screen();
@@ -76,6 +77,8 @@ public:
 		{ return (64*tiles_per_chunk); }
 	virtual int  get_start_tile_y()
 		{ return (136*tiles_per_chunk); }
+	virtual const char * get_extra_shape_file() 
+		{ return "static/endshape.flx"; }
 	};
 
 class SI_Game: public Game
@@ -93,6 +96,8 @@ public:
 		{ return (25*tiles_per_chunk); }
 	virtual int  get_start_tile_y()
 		{ return (155*tiles_per_chunk); }
+	virtual const char * get_extra_shape_file() 
+		{ return "static/paperdol.vga"; }
 	};
 	
 #endif
