@@ -1,5 +1,12 @@
 2000-08-01  Tristan Tarrant  <tarrant_tristan@emc.com>
 
+	* game.h, gamewin.cc: if in BG we show ENDSHAPE.FLX, if in SI we show 
+	PAPERDOL.VGA
+	* exult.cc: Default resolution is 320x200 with 2x filter. This is to be as
+	close as possible to the original.
+
+2000-08-01  Tristan Tarrant  <tarrant_tristan@emc.com>
+
 	* gamewin.*, exult.cc, usecode.cc: decided to not store the Game object inside
 	gamewin, but use the static get_game of the Game class instead. "There can be
 	only one" (TM)
